--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+title: Identifying Activity Centers in the San Diego Region
 remote_theme: pages-themes/slate@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
